kubernetes/web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tktchurch-website
  namespace: default
spec:
  selector:
    app: tktchurch-website
  ports:
  - name: http
    targetPort: 8080
    port: 80
