kubernetes/web/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tktchurch-website
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.kingstemple.in`)
      kind: Rule
      services:
        - name: tktchurch-website
          port: 80
    - match: Host(`kingstemple.in`)
      kind: Rule
      services:
        - name: tktchurch-website
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: kingstemple-in-tls
